# sam-preflight

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
sam_preflight/: __main__.py  check_runner.py  cli.py  config.py  models.py  quantity.py  render.py  values_merge.py
sam_preflight/checks/: __init__.py  capacity.py  config.py  dns.py  external.py  helm_dryrun.py  helm_repo.py  namespace_rbac.py  networking.py  registry.py  storage.py  tooling.py
sam_preflight/data/: chart_defaults.solace-agent-mesh.values.yaml
tests/: test_capacity.py  test_config_validation.py  test_dns.py  test_quantity.py  test_required_config.py  test_values_merge.py
tools/preflight/: .env.example  sam_preflight.py  sample-values.yaml
